# manos

./: .gitignore  Cargo.toml  README.md  plate-core.example.json  richtext.json  richtext_next.example.json
.github/workflows/: ci.yml
crates/diffview/: Cargo.toml  README.md
crates/diffview/docs/: 产品蓝图与UI设计.md  产品设计与实现计划.md  论述摘录.md
crates/diffview/examples/: diff_model.rs
crates/diffview/src/: conflict.rs  diff.rs  document.rs  lib.rs  model.rs
crates/dnd/: Cargo.toml
crates/dnd/src/: common.rs  lib.rs  list.rs  tree.rs  vlist.rs  vtree.rs
crates/dnd_list/: Cargo.toml
crates/dnd_list/src/: lib.rs  list.rs
crates/dnd_tree/: Cargo.toml
crates/dnd_tree/src/: lib.rs  tree.rs
crates/dnd_vlist/: Cargo.toml
crates/dnd_vlist/src/: lib.rs  list.rs
crates/dnd_vtree/: Cargo.toml
crates/dnd_vtree/src/: lib.rs  tree.rs
crates/extras/: Cargo.toml
crates/extras/src/: animated_segmented.rs  assets.rs  lib.rs  plate_toolbar.rs
crates/git-viewer/: Cargo.toml  build.rs
crates/git-viewer/assets/fonts/: README.md
crates/git-viewer/docs/: JetBrains_对标差异与产品蓝图.md
crates/git-viewer/src/: git.rs  main.rs  model.rs
crates/git-viewer/src/app/: conflict_view.rs  diff_helpers.rs  diff_view.rs  file_view.rs  fonts.rs  mod.rs  ref_picker.rs  sidebar.rs  ui.rs
crates/plate-core/: Cargo.toml
crates/plate-core/src/: core.rs  lib.rs  ops.rs  plugin.rs  serde_value.rs
crates/plate-core/tests/: align.rs  autoformat.rs  blockquote.rs  code_block.rs  columns.rs  emoji.rs  font_size.rs  heading.rs  image.rs  indent.rs  marks_range.rs  query_api.rs  table.rs  todo.rs  toggle.rs  undo_redo.rs
crates/rich_text/: Cargo.toml
crates/rich_text/src/: document.rs  editor.rs  element.rs  lib.rs  rope_ext.rs  state.rs  style.rs  theme.rs  types.rs  value.rs
crates/story/: Cargo.toml  richtext.example.json
crates/story/examples/: dnd_list.rs  dnd_tree.rs  dnd_vlist.rs  dnd_vtree.rs  plate_toolbar_buttons.rs  richtext.rs  richtext_next.rs  webview-assets-missing.html  webview.rs
crates/story/examples/webview-app/: README.md  package.json
crates/story/examples/webview-app/src/: App.tsx
crates/story/src/: app_menus.rs  dnd_list.rs  dnd_tree.rs  dnd_vlist.rs  dnd_vtree.rs  gallery.rs  lib.rs  main.rs  plate_toolbar_buttons.rs  richtext.rs  richtext_next.rs  simple_browser.rs  themes.rs  webview_story.rs
crates/webview/: CALLING_RUST_PARITY.md  Cargo.toml  README.MD
crates/webview-macros/: Cargo.toml
crates/webview-macros/src/: lib.rs
crates/webview/src/: lib.rs  webview.rs
crates/webview/src/scripts/tauri/: ipc-protocol.js
docs/: dnd-list-component-design.md  dnd-tree.md  dnd-vlist-vtree-plan.md  plate-toolbar-buttons.md  richtext-extensibility.md  richtext-known-issues.md  richtext-next-known-issues.md  richtext-plugin-system-plan.md
