[workspace]
members = [
    "crates/git-viewer",
    "crates/diffview",
    "crates/dnd_list",
    "crates/dnd_tree",
    "crates/dnd_vlist",
    "crates/dnd_vtree",
    "crates/extras",
    "crates/rich_text",
    "crates/story",
    "crates/webview",
    "crates/webview-macros",
]
default-members = ["crates/story"]
resolver = "2"

[workspace.package]
edition = "2024"
publish = false

[workspace.dependencies]
anyhow = "1"
gpui = "0.2.2"
gpui-component = "0.4.0"
gpui-manos-components = { path = "crates/extras", version = "0.1.0" }
gpui-manos-plate = { path = "crates/rich_text", version = "0.1.0" }
gpui-dnd-list = { path = "crates/dnd_list", version = "0.1.0" }
gpui-dnd-tree = { path = "crates/dnd_tree", version = "0.1.0" }
gpui-dnd-vlist = { path = "crates/dnd_vlist", version = "0.1.0" }
gpui-dnd-vtree = { path = "crates/dnd_vtree", version = "0.1.0" }
gpui-manos-webview = { path = "crates/webview", version = "0.1.0" }
gpui-manos-webview-macros = { path = "crates/webview-macros", version = "0.1.0" }
http = { version = "1.3.1" }
raw-window-handle = { version = "0.6", features = ["std"] }
ropey = { version = "=2.0.0-beta.1", features = ["metric_lines_lf", "metric_utf16"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
serialize-to-javascript = { version = "0.1.2" }
sum-tree = { version = "0.2.0", package = "zed-sum-tree" }
wry = { version = "0.53.5" }
