[workspace]
members = ["crates/extras", "crates/plate-core", "crates/rich_text", "crates/story"]
default-members = ["crates/story"]
resolver = "2"

[workspace.package]
edition = "2024"
publish = false

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
gpui = "0.2.2"
gpui-component = "0.4.0"
gpui-manos-components = { path = "crates/extras", version = "0.1.0" }
gpui-manos-plate = { path = "crates/rich_text", version = "0.1.0" }
gpui-plate-core = { path = "crates/plate-core", version = "0.1.0" }
ropey = { version = "=2.0.0-beta.1", features = ["metric_lines_lf", "metric_utf16"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sum-tree = { version = "0.2.0", package = "zed-sum-tree" }
