[package]
name = "gpui-manos-components-story"
version = "0.1.0"
publish = false
edition.workspace = true

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui-component.workspace = true
gpui-manos-components.workspace = true
gpui-manos-plate.workspace = true
gpui-manos-dnd.workspace = true
gpui-manos-webview.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
